Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35785

innodb_log_file_mmap is not defined on 32-bit systems

    XMLWordPrintable

Details

    Description

      otto pointed out that the configuration parameter innodb_log_file_mmap is not available on 32-bit target platforms, for no apparent reason.

      When fixing MDEV-34062 I had thought that including two ib_logfile0 parsers would unnecessarily increase the size of the code. Technically, we can in fact memory-map the InnoDB write-ahead log ib_logfile0 also on 32-bit systems, provided that the size is small enough so that the virtual address space will not be exhausted.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.