storage/innobase/log/log0log.cc
@@ -187,7 +187,6 @@ void log_file_t::write(os_offset_t offset, span<const byte> buf) noexcept
   abort();
 }
 
-#ifdef HAVE_INNODB_MMAP
 # ifdef HAVE_PMEM
 #  include "cache.h"
 # endif
@@ -203,6 +202,10 @@ static void *log_mmap(os_file_t file,
 # endif
                       os_offset_t size)
 {
+#if SIZEOF_SIZE_T < 8
+  if (size != os_offset_t(size_t(size)))
+    return MAP_FAILED;
+#endif
   if (my_system_page_size > 4096)
     return MAP_FAILED;
 # ifndef HAVE_PMEM
@@ -300,20 +303,17 @@ remap:
 # endif
   return ptr;
 }
-#endif
 
 #if defined __linux__ || defined _WIN32
 /** Display a message about opening the log */
 ATTRIBUTE_COLD static void log_file_message()
 {
   sql_print_information("InnoDB: %s (block size=%u bytes)",
-# ifdef HAVE_INNODB_MMAP
                         log_sys.log_mmap
                         ? (log_sys.log_buffered
                            ? "Memory-mapped log"
                            : "Memory-mapped unbuffered log")
                         :
-# endif
                         log_sys.log_buffered
                         ? "Buffered log writes"
                         : "File system buffers for log disabled",
@@ -332,7 +332,6 @@ bool log_t::attach(log_file_t file, os_offset_t size)
   ut_ad(!buf);
   ut_ad(!flush_buf);
   ut_ad(!writer);
-#ifdef HAVE_INNODB_MMAP
   if (size)
   {
 # ifdef HAVE_PMEM
@@ -363,7 +362,6 @@ bool log_t::attach(log_file_t file, os_offset_t size)
     }
   }
   log_mmap= false;
-#endif
   buf= static_cast<byte*>(ut_malloc_dontdump(buf_size, PSI_INSTRUMENT_ME));
   if (!buf)
   {
@@ -400,9 +398,7 @@ bool log_t::attach(log_file_t file, os_offset_t size)
   writer_update();
   memset_aligned<512>(checkpoint_buf, 0, write_size);
 
-#ifdef HAVE_INNODB_MMAP
  func_exit:
-#endif
   log_file_message();
   return true;
 }
@@ -477,25 +473,19 @@ ATTRIBUTE_COLD static void log_close_failed(dberr_t err)
   ib::fatal() << "closing ib_logfile0 failed: " << err;
 }
 
-#ifdef HAVE_INNODB_MMAP
 void log_t::close_file(bool really_close)
-#else
-void log_t::close_file()
-#endif
 {
-#ifdef HAVE_INNODB_MMAP
   if (is_mmap())
   {
     ut_ad(!checkpoint_buf);
     ut_ad(!flush_buf);
     if (buf)
     {
-      my_munmap(buf, file_size);
+      my_munmap(buf, size_t(file_size));
       buf= nullptr;
     }
   }
   else
-#endif
   {
     ut_ad(!buf == !flush_buf);
     ut_ad(!buf == !checkpoint_buf);
@@ -512,9 +502,7 @@ void log_t::close_file()
 
   writer= nullptr;
 
-#ifdef HAVE_INNODB_MMAP
   if (really_close)
-#endif
     if (is_opened())
       if (const dberr_t err= log.close())
         log_close_failed(err);
@@ -621,14 +609,10 @@ log_t::resize_start_status log_t::resize_start(os_offset_t size) noexcept
       void *ptr= nullptr, *ptr2= nullptr;
       success= os_file_set_size(path.c_str(), resize_log.m_file, size);
       if (!success);
-#ifdef HAVE_INNODB_MMAP
+#ifdef HAVE_PMEM
       else if (is_mmap())
       {
-        ptr= ::log_mmap(resize_log.m_file,
-#ifdef HAVE_PMEM
-                        is_pmem,
-#endif
-                        size);
+        ptr= ::log_mmap(resize_log.m_file, is_pmem, size);
 
         if (ptr == MAP_FAILED)
           goto alloc_fail;
@@ -636,6 +620,7 @@ log_t::resize_start_status log_t::resize_start(os_offset_t size) noexcept
 #endif
       else
       {
+        ut_ad(!is_mmap());
         ptr= ut_malloc_dontdump(buf_size, PSI_INSTRUMENT_ME);
         if (ptr)
         {
@@ -705,21 +690,26 @@ void log_t::resize_abort() noexcept
 
   if (resize_in_progress() > 1)
   {
-    if (!is_mmap())
+#ifdef HAVE_PMEM
+    const bool is_mmap{this->is_mmap()};
+#else
+    constexpr bool is_mmap{false};
+#endif
+    if (!is_mmap)
     {
       ut_free_dodump(resize_buf, buf_size);
       ut_free_dodump(resize_flush_buf, buf_size);
       resize_flush_buf= nullptr;
     }
-#ifdef HAVE_INNODB_MMAP
     else
     {
       ut_ad(!resize_log.is_opened());
       ut_ad(!resize_flush_buf);
+#ifdef HAVE_PMEM
       if (resize_buf)
         my_munmap(resize_buf, resize_target);
+#endif /* HAVE_PMEM */
     }
-#endif
     if (resize_log.is_opened())
       resize_log.close();
     resize_buf= nullptr;
@@ -1226,7 +1216,6 @@ ATTRIBUTE_COLD void log_write_and_flush_prepare()
          group_commit_lock::ACQUIRED);
 }
 
-#ifdef HAVE_INNODB_MMAP
 void log_t::clear_mmap()
 {
   if (!is_mmap() ||
@@ -1260,7 +1249,6 @@ void log_t::clear_mmap()
   }
   log_resize_release();
 }
-#endif
 
 /** Durably write the log up to log_sys.get_lsn(). */
 ATTRIBUTE_COLD void log_write_and_flush()
